erDiagram
    User ||--o| Customer : is_a
    User ||--o| Supplier : is_a
    User ||--o| Employee : is_a
    User ||--o{ Booking : makes
    User ||--o{ Notification : receives
    User {
        UUID id PK
        string email
        string password
        string firstName
        string lastName
        string phoneNumber
        enum role
    }
    Customer ||--|{ Booking : has
    Customer {
        UUID id PK
        UUID userId FK
        string legalNumber
        string address
        boolean isVIP
    }
    Supplier ||--|{ Rocket : owns
    Supplier ||--|{ Launch : schedules
    Supplier {
        UUID id PK
        UUID userId FK
        string companyName
        string legalNumber
        string address
    }
    Employee ||--o{ Booking : manages
    Employee {
        UUID id PK
        UUID userId FK
        string department
    }
    Rocket ||--o{ Launch : used_in
    Rocket {
        UUID id PK
        UUID supplierId FK
        string name
        string specifications
    }
    Launch ||--|{ Booking : has
    Launch ||--o{ Notification : triggers
    Launch {
        UUID id PK
        UUID rocketId FK
        UUID supplierId FK
        datetime launchDate
        string destination
        int capacity
        decimal pricePerSeat
        enum status
    }
    Booking ||--|{ Passenger : includes
    Booking ||--o{ Notification : triggers
    Booking {
        UUID id PK
        UUID customerId FK
        UUID launchId FK
        int numberOfSeats
        enum status
        decimal totalAmount
    }
    Passenger {
        UUID id PK
        UUID bookingId FK
        string firstName
        string lastName
        date dateOfBirth
    }
    Invoice ||--|| Booking : for
    Invoice ||--|| Launch : related_to
    Invoice ||--o{ PaymentRecord : has
    Invoice ||--o{ Notification : triggers
    Invoice {
        UUID id PK
        UUID bookingId FK
        UUID launchId FK
        decimal amount
        enum status
        datetime issueDate
        enum type
    }
    PaymentRecord {
        UUID id PK
        UUID invoiceId FK
        decimal amount
        datetime paymentDate
        enum paymentMethod
    }
    Notification {
        UUID id PK
        UUID userId FK
        UUID launchId FK
        UUID bookingId FK
        UUID invoiceId FK
        string message
        datetime timestamp
        enum type
        boolean isRead
    }
    SystemLog {
        UUID id PK
        datetime timestamp
        string logLevel
        string message
        string source
    }